objects/amc__Change_Request__c.object
<CustomObject>
    <fields>
        <fullName>amc__Adjust_Opportunity_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to TRUE if you wish the Opportunity Amount to be amended by the value of the Change Amount</description>
        <inlineHelpText>Set to TRUE if you wish the Opportunity Amount to be amended by the value of the Change Amount</inlineHelpText>
        <label>Adjust Opportunity Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Adjust_Project_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to TRUE if you wish the Project Budget to be amended by the value of the Change Amount</description>
        <inlineHelpText>Set to TRUE if you wish the Project Budget to be amended by the value of the Change Amount</inlineHelpText>
        <label>Adjust Project Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Change_Amount__c</fullName>
        <description>Identifies the amount the Project Budget will be changed by</description>
        <inlineHelpText>Identifies the amount the Project Budget will be changed by</inlineHelpText>
        <label>Change Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Client_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if this Change Request should be excluded from the Client Overview Page</inlineHelpText>
        <label>Exclude from Client Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Impact__c</fullName>
        <description>Identifies the expected impact on the project</description>
        <inlineHelpText>Identifies the expected impact on the project</inlineHelpText>
        <label>Impact</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>amc__Include_in_Weekly_Status_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if this record should be included in the Weekly Status Report PDF</inlineHelpText>
        <label>Include in Weekly Status Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links to the Opportunity this Change Request relates to</description>
        <inlineHelpText>Links to the Opportunity this Change Request relates to</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links to the Project this Change Request relates to</description>
        <inlineHelpText>Links to the Project this Change Request relates to</inlineHelpText>
        <label>Project</label>
        <referenceTo>amc__Project__c</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Request__c</fullName>
        <description>Identifies the details of the request</description>
        <inlineHelpText>Identifies the details of the request</inlineHelpText>
        <label>Request</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Change Request</label>
    <nameField>
        <label>Change Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Change Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>